implement login screen layout

--- a/app/src/pages/login/login.html
+++ b/app/src/pages/login/login.html
@@ -6,7 +6,7 @@
     <div padding-horizontal text-center class="animated fadeInDown">
       <div class="logo"></div>
       <h2 ion-text class="text-primary">
-        <strong>Ionic 3</strong> Start Theme
+        pro<strong>Motion</strong>
       </h2>
     </div>
 
@@ -23,21 +23,21 @@
       <ion-item>
         <ion-label floating>
           <ion-icon name="lock" item-start class="text-primary"></ion-icon>
-          Password
+          Senha
         </ion-label>
         <ion-input type="password"></ion-input>
       </ion-item>
     </form>
 
-    <p text-right ion-text color="secondary" tappable (click)="forgotPass()"><strong>Forgot Password?</strong></p>
+    <p text-right ion-text color="secondary" tappable (click)="forgotPass()"><strong>Esqueceu a Senha?</strong></p>
 
     <div>
       <button ion-button icon-start block color="dark" tappable (click)="login()">
         <ion-icon name="log-in"></ion-icon>
-        SIGN IN
+        ENTRAR
       </button>
 
-      <p text-center ion-text color="secondary">Or Sign in with:</p>
+      <p text-center ion-text color="secondary">Ou acesse com:</p>
 
       <ion-grid>
         <ion-row>
@@ -64,7 +64,7 @@
 
     <!-- Other links -->
     <div text-center margin-top>
-      <span ion-text color="secondary" tappable (click)="register()">New here? <strong>Sign up</strong></span>
+      <span ion-text color="secondary" tappable (click)="register()">Novo aqui? <strong>Cadastre-se</strong></span>
     </div>
 
   </div>
