--- a/app/src/pages/register/register.html
+++ b/app/src/pages/register/register.html
@@ -6,7 +6,7 @@
     <div padding text-center>
       <div class="logo"></div>
       <h2 ion-text class="text-primary">
-        <strong>Ionic 3</strong> Start Theme
+        <strong>ProMotion</strong> Cadastro
       </h2>
     </div>
 
@@ -15,7 +15,23 @@
       <ion-item>
         <ion-label floating>
           <ion-icon name="person" item-start class="text-primary"></ion-icon>
-          Full Name
+          Nome Completo
+        </ion-label>
+        <ion-input type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>
+          <ion-icon name="person" item-start class="text-primary"></ion-icon>
+          CPF
+        </ion-label>
+        <ion-input type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>
+          <ion-icon name="person" item-start class="text-primary"></ion-icon>
+          Nome de Usuário
         </ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
@@ -31,7 +47,7 @@
       <ion-item>
         <ion-label floating>
           <ion-icon name="lock" item-start class="text-primary"></ion-icon>
-          Password
+          Senha
         </ion-label>
         <ion-input type="password"></ion-input>
       </ion-item>
@@ -39,10 +55,10 @@
 
     <div margin-top>
       <button ion-button block color="dark" tappable (click)="register()">
-        SIGN UP
+        Cadastrar
       </button>
 
-      <p text-center ion-text color="secondary">Or Sign Up with:</p>
+      <p text-center ion-text color="secondary">Ou entre com uma rede social:</p>
 
       <ion-grid>
         <ion-row>
@@ -67,7 +83,7 @@
 
     <!-- Other links -->
     <div text-center margin-top>
-      <span ion-text color="primary" tappable (click)="login()">I have an account</span>
+      <span ion-text color="primary" tappable (click)="login()">Já possuo uma conta</span>
     </div>
 
   </div>
