--- a/app/src/pages/register/register.html
+++ b/app/src/pages/register/register.html
@@ -64,6 +64,7 @@
       <button ion-button block color="dark" type="submit" [disabled]="!form.valid">
         Cadastrar
       </button>
+      <button ion-button block (click)="doAlert()">Basic Alert</button>
 
       <p text-center ion-text color="secondary">Ou entre com uma rede social:</p>
 
