--- a/app/src/pages/register/register.html
+++ b/app/src/pages/register/register.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Login form -->
-    <form class="list-form" [formGroup]="form" (ngSubmit)="register()">
+    <form class="list-form" [formGroup]="form">
       <ion-item>
         <ion-label floating>
           <ion-icon name="person" item-start class="text-primary"></ion-icon>
@@ -61,7 +61,7 @@
     </form>
 
     <div margin-top>
-      <button ion-button block color="dark" type="submit" [disabled]="!form.valid">
+      <button ion-button block color="dark" (click)="register()" [disabled]="!form.valid">
         Cadastrar
       </button>
       <button ion-button block (click)="doAlert()">Basic Alert</button>
