API: Promotion adicionando listagem das promoções do usuário

--- a/app/src/pages/search/search.html
+++ b/app/src/pages/search/search.html
@@ -23,7 +23,7 @@
       <div>
         <table>
           <tr>
-            <th class="image"><img width="80" height="80" [src]=item.img_url></th>
+            <th class="image"><img width="80" height="80" [src]=item.image_url></th>
             <th class="price">price: {{item.price}}</th>
           </tr>
         </table>
