--- a/app/src/pages/edit/edit.html
+++ b/app/src/pages/edit/edit.html
@@ -52,10 +52,25 @@
 
       <ion-item>
         <ion-label floating>
-          <ion-icon name="mail" item-start class="text-primary"></ion-icon>
-          Email
+          <ion-icon name="lock" item-start class="text-primary"></ion-icon>
+          Celular
         </ion-label>
-        <ion-input type="email" formControlName="email"></ion-input>
+        <ion-input type="cellphone" formControlName="cellphone"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>
+          <ion-icon name="lock" item-start class="text-primary"></ion-icon>
+          Telefone
+        </ion-label>
+        <ion-input type="telephone" formControlName="telephone"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>
+          <ion-icon name="lock" item-start class="text-primary"></ion-icon>
+          Imagem de perfil
+        </ion-label>
+        <ion-input type="image_url" formControlName="image_url"></ion-input>
       </ion-item>
 
       <ion-item>
@@ -75,7 +90,7 @@
     </form>
 
     <div margin-top>
-      <button ion-button block color="dark" (click)="confirm()" [disabled]="!form.valid">
+      <button ion-button block color="dark" (click)="confirm()" >
         Confirmar
       </button>
     </div>
