--- a/app/src/pages/settings/settings.html
+++ b/app/src/pages/settings/settings.html
@@ -3,7 +3,7 @@
 
   <ion-navbar class="no-border">
     <ion-title>
-      <ion-icon name="cog" class="text-primary"></ion-icon>
+      <ion-icon name="settings" class="text-primary"></ion-icon>
       <span class="text-primary">Settings</span>
     </ion-title>
   </ion-navbar>
@@ -33,23 +33,7 @@
         <ion-option value="zh-TW">Chinese (TW)</ion-option>
       </ion-select>
     </ion-item>
-    <ion-item>
-      <ion-label>Currency</ion-label>
-      <ion-select [(ngModel)]="currency" cancelText="Cancel" okText="OK">
-        <ion-option value="USD" selected="true">U.S Dollar (US$)</ion-option>
-        <ion-option value="EUR">Euro (€)</ion-option>
-        <ion-option value="GBP">Pound (£)</ion-option>
-        <ion-option value="BRL">Brazilian Real (R$)</ion-option>
-        <ion-option value="CNY">Chinese Yuan</ion-option>
-      </ion-select>
-    </ion-item>
-    <ion-item>
-      <ion-label>Units</ion-label>
-      <ion-select [(ngModel)]="munits" cancelText="Cancel" okText="OK">
-        <ion-option value="M" selected="true">Miles (ft²)</ion-option>
-        <ion-option value="K">Kilometers (m²)</ion-option>
-      </ion-select>
-    </ion-item>
+    
     <ion-item>
       <ion-label>Notifications?</ion-label>
       <ion-toggle checked="true"></ion-toggle>
