--- a/app/src/pages/edit/editAuth.html
+++ b/app/src/pages/edit/editAuth.html
@@ -13,7 +13,7 @@
           <ion-icon name="notifications"></ion-icon>
         </button>
         <button ion-button tappable (click)="goToAccount()">
-          <ion-icon name="cog"></ion-icon>
+          <ion-icon name="settings"></ion-icon>
         </button>
       </ion-buttons>
     </ion-navbar>
