--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -12,7 +12,7 @@
         <ion-icon name="notifications"></ion-icon>
       </button>
       <button ion-button tappable (click)="goToAccount()">
-        <ion-icon name="cog"></ion-icon>
+        <ion-icon name="settings"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
