--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -17,3 +17,38 @@
     </ion-buttons>
   </ion-navbar>
 </ion-header>
+<ion-card>
+
+  <ion-item>
+
+
+  </ion-item>
+  
+  <ion-item>
+    <ion-avatar item-start>
+      <img src="../assets/img/avatar.jpeg">
+    </ion-avatar>
+    <h2>Nome do Usuário</h2>
+    <p>data da publicação</p>
+  </ion-item>
+  <img width="80" height= "120" src="../assets/img/interrogação.jpg">
+  <ion-card-content>
+    <p>Breve descrição sobre o produto Anunciado</p>
+  </ion-card-content>
+  <ion-row>
+    <ion-col>
+      <button ion-button icon-start clear small>
+        <ion-icon name="thumbs-up"></ion-icon>
+        <div>12 Likes</div>
+      </button>
+    </ion-col>
+    <ion-col>
+      <button ion-button icon-start clear small>
+        <ion-icon name="text"></ion-icon>
+        <div>4 Comments</div>
+      </button>
+    </ion-col>
+    <ion-col center text-center>
+    </ion-col>
+  </ion-row>
+  </ion-card>
