--- a/app/src/pages/search/search.html
+++ b/app/src/pages/search/search.html
@@ -6,11 +6,10 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <form class="list-form" [formGroup]="form">
-      <ion-input class="inp" placeholder="Digite..." padding-left autofocus formControlName="input"></ion-input>  
-      <button class="btt" ion-button icon-start block color="dark" tappable (click)="pesquisa()">
-        <ion-icon name="search"></ion-icon>
-        Pesquisar
-      </button>
+      <ion-row>
+        <ion-input class="inp" placeholder="Digite..." autofocus formControlName="input"></ion-input>
+        <button class="btt" ion-button icon-start block color="dark" tappable (click)="pesquisa()"><ion-icon name="search"></ion-icon></button>
+      </ion-row>
     </form>
   </ion-navbar>
 
