APP: Atualizando navbar

--- a/app/src/pages/settings/settings.html
+++ b/app/src/pages/settings/settings.html
@@ -4,7 +4,7 @@
   <ion-navbar class="no-border">
     <ion-title>
       <ion-icon name="settings" class="text-primary"></ion-icon>
-      <span class="text-primary">Settings</span>
+      <span class="text-primary">Configurações</span>
     </ion-title>
   </ion-navbar>
 
