APP: Adicionando custom navbar

--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -1,18 +1,6 @@
-﻿<!-- -->
+<!-- -->
 <ion-header>
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>
-      pro<strong>Motion</strong>
-    </ion-title>
-    <ion-buttons end>
-      <button ion-button tappable (click)="presentNotifications($event)">
-        <ion-icon name="notifications"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-navbar>
+  <custom-navbar></custom-navbar>
 </ion-header>
 
 <ion-content>
