--- a/app/src/pages/edit/edit.html
+++ b/app/src/pages/edit/edit.html
@@ -1,20 +1,8 @@
 <!-- # -->
 <!-- -->
 <ion-header>
-    <ion-navbar color="primary">
-      <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
-      </button>
-      <ion-title>
-        Editar Perfil
-      </ion-title>
-      <ion-buttons end>
-        <button ion-button tappable (click)="presentNotifications($event)">
-          <ion-icon name="notifications"></ion-icon>
-        </button>
-      </ion-buttons>
-    </ion-navbar>
-  </ion-header>
+  <custom-navbar></custom-navbar>
+</ion-header>
   
 <!-- -->
 <ion-content class="auth-page">
