--- a/app/src/pages/edit/editAuth.html
+++ b/app/src/pages/edit/editAuth.html
@@ -1,21 +1,9 @@
 <!-- # -->
 <!-- -->
 <ion-header>
-    <ion-navbar color="primary">
-      <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
-      </button>
-      <ion-title>
-        pro<strong>Motion</strong>
-      </ion-title>
-      <ion-buttons end>
-        <button ion-button tappable (click)="presentNotifications($event)">
-          <ion-icon name="notifications"></ion-icon>
-        </button>
-      </ion-buttons>
-    </ion-navbar>
-  </ion-header>
-  
+  <custom-navbar></custom-navbar>
+</ion-header>
+
 <!-- -->
 <ion-content class="auth-page">
   <div class="login-content">
