app: adicionado adcard component

--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -4,38 +4,5 @@
 </ion-header>
 
 <ion-content>
-<div class="corpo">
-<ion-card  *ngFor="let item of promotions">
-  
-  <ion-item>
-    <ion-avatar item-start>
-      <img src="../assets/img/avatar.jpeg">
-    </ion-avatar>
-    <h2>{{ item.username }}</h2>
-    <p>{{ item.date }}</p>
-  </ion-item>
-  <div class="frame">
-        <img class="inner" [src]=item.image_url/>
-  </div>
-  <ion-card-content>
-    <p>{{ item.description }}</p>
-  </ion-card-content>
-  <ion-row>
-    <ion-col>
-      <button ion-button icon-start clear small>
-        <ion-icon name="thumbs-up"></ion-icon>
-        <div>{{ item.likes }}</div>
-      </button>
-    </ion-col>
-    <ion-col>
-      <button ion-button icon-start clear small>
-        <ion-icon name="text"></ion-icon>
-        <div>{{ item.comments }} Comentários</div>
-      </button>
-    </ion-col>
-    <ion-col center text-center>
-    </ion-col>
-  </ion-row>
-  </ion-card>
-</div>
+  <adcard [list]="promotions"></adcard>
 </ion-content>
