--- a/app/src/pages/edit/edit.html
+++ b/app/src/pages/edit/edit.html
@@ -54,7 +54,7 @@
         <ion-item>
           <ion-label floating>
             <ion-icon name="image" item-start class="text-primary"></ion-icon>
-             Imagem 
+             Imagem de Perfil
           </ion-label>
           <ion-input type="image_url" formControlName="image_url"></ion-input>
         </ion-item>
