alteração foto de perfil
mostra foto que do avatar como botão

--- a/app/src/pages/edit/edit.html
+++ b/app/src/pages/edit/edit.html
@@ -13,8 +13,7 @@
        
           <!-- Logo -->
         <ion-item>
-            <p class="p_img">Imagem de Perfil</p>
-          <ion-img width="150" src="../assets/img/img_upload.png"></ion-img>
+          <ion-img width="150" src="../assets/img/avatar.jpeg"></ion-img>
         </ion-item>
     
         <ion-item>
