APP: Mudanças página wishlist

--- a/app/src/pages/search/search.html
+++ b/app/src/pages/search/search.html
@@ -6,7 +6,7 @@
     <form class="list-form" [formGroup]="form">
       <ion-row>
         <ion-input class="inp" placeholder="Digite..." autofocus formControlName="input"></ion-input>
-        <button class="btt" ion-button icon-start block color="dark" tappable (click)="pesquisa()"><ion-icon name="search"></ion-icon></button>
+        <button class="btt" ion-button icon-only block color="dark" tappable (click)="pesquisa()"><ion-icon name="search"></ion-icon></button>
       </ion-row>
     </form>
   </ion-navbar>
