app: atualizando página de notificação com os matchs

--- a/app/src/pages/notifications/notifications.html
+++ b/app/src/pages/notifications/notifications.html
@@ -3,20 +3,11 @@
   	<ion-icon name="notifications" color="primary"></ion-icon>
   	<span ion-text color="primary" class="bold">Notifications</span>
   </ion-list-header>
-  <button ion-item color="secondary" class="text-1x" tappable (click)="close()">
-  	<ion-icon name="mail"></ion-icon>
-  	New booking success!
-  </button>
-  <button ion-item color="secondary" class="text-1x" tappable (click)="close()">
-  	<ion-icon name="mail"></ion-icon>
-  	Activity rescheduled
-  </button>
-  <button ion-item class="text-1x" tappable (click)="close()">
-  	<ion-icon name="mail-open" color="secondary"></ion-icon>
-  	<span ion-text color="secondary">Activity rescheduled</span>
-  </button>
-  <button ion-item class="text-1x" tappable (click)="close()">
-  	<ion-icon name="mail-open" color="secondary"></ion-icon>
-  	<span ion-text color="secondary">Activity rescheduled</span>
-  </button>
+  
+  <div *ngFor="let item of notifications">
+    <button ion-item [color]="item.back_color" class="text-1x" tappable (click)="close(item.id)">
+      <ion-icon [name]="item.icon"></ion-icon>
+      <span ion-text [color]="item.text_color">{{ item.name | async }}</span>
+    </button>  
+  </div>
 </ion-list>
