--- a/app/src/pages/edit/edit.html
+++ b/app/src/pages/edit/edit.html
@@ -27,17 +27,9 @@
         <ion-item>
           <ion-label floating>
             <ion-icon name="person" item-start class="text-primary"></ion-icon>
-            CPF
-          </ion-label>
-          <ion-input type="text" formControlName="cpf" [brmasker]="{mask:'000.000.000-00', len:14, type:'num'}"></ion-input>
-        </ion-item>
-  
-        <ion-item>
-          <ion-label floating>
-            <ion-icon name="person" item-start class="text-primary"></ion-icon>
             Nome de Usuário
           </ion-label>
-          <ion-input type="text" formControlName="nickname"></ion-input>
+          <ion-input type="text" formControlName="nickname" disabled="true"></ion-input>
         </ion-item>
   
         <ion-item>
@@ -54,22 +46,6 @@
             Telefone
           </ion-label>
           <ion-input type="telephone" formControlName="telephone"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label floating>
-            <ion-icon name="lock" item-start class="text-primary"></ion-icon>
-            Senha
-          </ion-label>
-          <ion-input type="password" formControlName="password"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label floating>
-            <ion-icon name="lock" item-start class="text-primary"></ion-icon>
-            Confirmar Senha
-          </ion-label>
-          <ion-input type="password" formControlName="confirm_password"></ion-input>
         </ion-item>
       </form>
   
