app: adicionado list component

--- a/app/src/pages/my-advertising/my-advertising.html
+++ b/app/src/pages/my-advertising/my-advertising.html
@@ -13,5 +13,5 @@
   <button class="btt" ion-button icon-start block color="dark" tappable (click)="criar()">
     Criar
   </button>
-  <adcard [list]="promotions"></adcard>
+  <list type="adcard-user"></list>
 </ion-content>
