--- a/app/src/pages/search/search.html
+++ b/app/src/pages/search/search.html
@@ -14,5 +14,5 @@
 </ion-header>
 
 <ion-content>
-  <adcard [list]="promotions"></adcard>
+  <list type="adcard" [endpoint]="endpoint"></list>
 </ion-content>
