--- a/app/src/pages/wishlist/wishlist.html
+++ b/app/src/pages/wishlist/wishlist.html
@@ -12,17 +12,5 @@
 
 
 <ion-content class="content" padding>
-  <ion-card *ngFor="let item of wishlist">
-    <ion-item>
-      <ion-col>
-        <button class="bttdel" ion-button icon-only tappable (click)="delete(item.id)"><ion-icon name="trash"></ion-icon></button>
-      </ion-col>
-      <ion-col>
-        {{ item.register_date }}
-      </ion-col>
-      <ion-col>
-        {{ item.name }}
-      </ion-col>
-    </ion-item>
-  </ion-card>
+  <list type="wishlist"></list>
 </ion-content>
