--- a/app/src/pages/advertising/advertising.html
+++ b/app/src/pages/advertising/advertising.html
@@ -31,7 +31,6 @@
               <span>R$ {{item.promotion.price}}</span>
             </div>
           </div>
-          <button class="btt">Comprar</button>
         </ion-item>
         <ion-item style="background-color: #EEEEEE;">
           <ion-avatar item-start>
@@ -42,11 +41,11 @@
             <ion-icon name="text"></ion-icon>
             <div>{{ item.promotion.comments }} Comentários</div>
           </button>
-          <button style="float: right;" ion-button icon-start clear small (click)="Vote(false)">
+          <button style="float: right;" ion-button icon-start clear small>
             <ion-icon name="thumbs-down"></ion-icon>
             <div>{{ item.promotion.order_downvotes }} Dislikes</div>
           </button>
-          <button style="float: right;" ion-button icon-start clear small (click)="Vote(true)">
+          <button style="float: right;" ion-button icon-start clear small>
             <ion-icon name="thumbs-up"></ion-icon>
             <div>{{ item.promotion.order_upvotes }} Likes</div>
           </button>
@@ -54,6 +53,7 @@
       </ion-item-sliding>
     </ion-list>
   </ion-card>
+  <!--Todo criar componente para os comentários-->
   <ion-card>
     <ion-item>
       <ion-avatar item-start>
