app: adicionado ordercard component

--- a/app/src/pages/saleHistory/saleHistory.html
+++ b/app/src/pages/saleHistory/saleHistory.html
@@ -5,11 +5,5 @@
 <ion-content class="content">
   <h1>Histórico de vendas</h1>
 <!--Todo Criar componente para o histórico de vendas-->
-<ion-card>
-    <ion-item>
-      <ion-col>promotion name</ion-col>
-      <ion-col>datetime</ion-col>
-      <ion-col>aproved by</ion-col>
-    </ion-item>
-  </ion-card>
+  <list type="order"></list>
 </ion-content>
