--- a/app/src/pages/create-ad/create-ad.html
+++ b/app/src/pages/create-ad/create-ad.html
@@ -5,18 +5,15 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title>create-ad</ion-title>
-  </ion-navbar>
-
+  <custom-navbar></custom-navbar>
 </ion-header>
 
 <ion-content padding>
   <form class="list-form" [formGroup]="form">
     <ion-item>
       <ion-label floating>
-        <ion-icon name="basket" item-start class="text-primary"></ion-icon>
-        Nome
+        <ion-icon name="megaphone" item-start class="text-primary"></ion-icon>
+        Nome da Promoção
       </ion-label>
       <ion-input type="text" formControlName="name"></ion-input>
     </ion-item>
@@ -34,22 +31,22 @@
         <ion-icon name="image" item-start class="text-primary"></ion-icon>
         URL da Imagem
       </ion-label>
-      <ion-input type="URL" formControlName="Imagem"></ion-input>
+      <ion-input type="URL" formControlName="image"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>
-        <ion-icon name="add" item-start class="text-primary"></ion-icon>
-          Empresa
+        <ion-icon name="cart" item-start class="text-primary"></ion-icon>
+          Loja
       </ion-label>
-      <ion-input type="text" formControlName="codigo_empresa"></ion-input>
+      <ion-input type="text" formControlName="store_id"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label><ion-icon name="pin" item-start class="text-primary"></ion-icon>
         Estado
       </ion-label>
-      <ion-select [(ngModel)]="Estado" cancelText="Cancel" okText="OK">
+      <ion-select formControlName="state_id" cancelText="Cancel" okText="OK">
         <ion-option value="AC">Acre</ion-option>
 	      <ion-option value="AL">Alagoas</ion-option>
 	      <ion-option value="AP">Amapá</ion-option>
@@ -80,4 +77,7 @@
       </ion-select>
     </ion-item>
   </form>
+  <button ion-button block color="dark" (click)="create-ad()" [disabled]="!form.valid">
+    Criar Anúncio
+  </button>
 </ion-content>
