--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -4,5 +4,8 @@
 </ion-header>
 
 <ion-content>
-  <list type="adcard-user"></list>
+  <list type="adcard" [endpoint]="endpoint"></list>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
