app: adicionado botão de reporte

--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -5,7 +5,7 @@
 
 <ion-content>
   <list type="adcard" [endpoint]="endpoint"></list>
-  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+  <!--ion-infinite-scroll (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
-  </ion-infinite-scroll>
+  </ion-infinite-scroll-->
 </ion-content>
