--- a/app/src/pages/purchase-history/purchase-history.html
+++ b/app/src/pages/purchase-history/purchase-history.html
@@ -4,6 +4,6 @@
 
 <ion-content class="content">
   <h1>Histórico de compras</h1>
-  <!--list type="history"></list>-->
+  <list type="history"></list>
 </ion-content>
 
