app: createad adicionar imagem

--- a/app/src/pages/create-ad/create-ad.html
+++ b/app/src/pages/create-ad/create-ad.html
@@ -31,9 +31,11 @@
         <ion-icon name="image" item-start class="text-primary"></ion-icon>
         URL da Imagem
       </ion-label>
-      <ion-input type="text" formControlName="image"></ion-input>
+      <ion-input type="text" formControlName="image" readonly [value]='image_url'></ion-input>
     </ion-item>
-
+    <ion-item>
+      <imgupload (imageUrl)="onImageChange($event)"></imgupload>
+    </ion-item>
     <ion-item>
       <ion-label floating>
         <ion-icon name="cart" item-start class="text-primary"></ion-icon>
