Cashback na pagina da promo
cashback sendo mostrado na pagina de cada promoção

--- a/app/src/pages/notifications/notifications.html
+++ b/app/src/pages/notifications/notifications.html
@@ -5,7 +5,7 @@
   </ion-list-header>
   
   <div *ngFor="let item of notifications">
-    <button ion-item [color]="item.back_color" class="text-1x" tappable (click)="close(item.id)">
+    <button ion-item [color]="item.back_color" class="text-1x" tappable (click)="close(item.id,item)">
       <ion-icon [name]="item.icon"></ion-icon>
       <span ion-text [color]="item.text_color">{{ item.name | async }}</span>
     </button>  
