--- a/app/src/pages/advertising/advertising.html
+++ b/app/src/pages/advertising/advertising.html
@@ -1,4 +1,3 @@
-<!-- -->
 <ion-header>
   <ion-navbar color="primary">
     <ion-buttons end>
@@ -28,8 +27,13 @@
           </div>
           <div class="price-container">
             <div class="price">
-              <span>R$ {{item.promotion.price}}</span>
+              <span style="font-size: 45px;">R$ {{item.promotion.price}}</span>
             </div>
+          </div>
+          <div class="text-cash">
+              <div class="text">
+                <span style="font-size: 30px;">CashBack de 5%</span> <!--{{item.promotion.cashback}} no lugar do 5%-->
+              </div>
           </div>
         </ion-item>
         <ion-item style="background-color: #EEEEEE;">
