complemento da amostragem do cashback

--- a/app/src/pages/advertising/advertising.html
+++ b/app/src/pages/advertising/advertising.html
@@ -32,7 +32,7 @@
           </div>
           <div class="text-cash">
               <div class="text">
-                <span style="font-size: 30px;">CashBack de 5%</span> <!--{{item.promotion.cashback}} no lugar do 5%-->
+                <span style="font-size: 30px;">CashBack de {{item.promotion.cashback_percentage}}%</span>
               </div>
           </div>
         </ion-item>
