--- a/app/src/pages/edit/edit.html
+++ b/app/src/pages/edit/edit.html
@@ -12,10 +12,7 @@
       <form class="list-form" [formGroup]="form">
        
           <!-- Logo -->
-        <ion-item>
-          <ion-img width="150" src="../assets/img/avatar.jpeg"></ion-img>
-        </ion-item>
-    
+
         <ion-item>
           <ion-label floating>
             <ion-icon name="person" item-start class="text-primary"></ion-icon>
@@ -31,7 +28,19 @@
           </ion-label>
           <ion-input type="text" formControlName="nickname" disabled="true"></ion-input>
         </ion-item>
+
+        <ion-item>
+          <ion-label floating>
+            <ion-icon name="image" item-start class="text-primary"></ion-icon>
+            URL da Imagem
+          </ion-label>
+          <ion-input type="text" formControlName="image_url" readonly [value]='image_url'></ion-input>
+        </ion-item>
   
+        <ion-item>
+          <imgupload (imageUrl)="onImageChange($event)"></imgupload>
+        </ion-item>
+
         <ion-item>
           <ion-label floating>
             <ion-icon name="phone-portrait" item-start class="text-primary"></ion-icon>
