--- a/app/src/pages/advertising/advertising.html
+++ b/app/src/pages/advertising/advertising.html
@@ -35,6 +35,9 @@
                 <span style="font-size: 30px;">CashBack de {{item.promotion.cashback_percentage}}%</span>
               </div>
           </div>
+          <div class="order-button">
+              <button ion-button (click)="createOrder()"> Create order </button>
+          </div>
         </ion-item>
         <ion-item style="background-color: #EEEEEE;">
           <ion-avatar item-start>
