--- a/app/src/pages/advertising/advertising.html
+++ b/app/src/pages/advertising/advertising.html
@@ -32,7 +32,7 @@
           </div>
           <div class="text-cash">
               <div class="text">
-                <span style="font-size: 30px;">CashBack de {{item.promotion.cashback_percentage}}%</span>
+                <span style="font-size: 30px;">CashBack de {{item.promotion.cashback_percentage*20}}%</span>
               </div>
           </div>
           <div class="order-button">
