--- a/app/src/pages/advertising/advertising.html
+++ b/app/src/pages/advertising/advertising.html
@@ -35,8 +35,8 @@
                 <span style="font-size: 30px;">CashBack de {{item.promotion.cashback_percentage*20}}%</span>
               </div>
           </div>
-          <div class="order-button">
-              <button ion-button (click)="createOrder()"> Create order </button>
+          <div item-end>
+              <button ion-button large (click)="createOrder()"> Comprar </button>
           </div>
         </ion-item>
         <ion-item style="background-color: #EEEEEE;">
